增加输入判断-safe

--- a/myweb/myapp/templates/home.html
+++ b/myweb/myapp/templates/home.html
@@ -49,7 +49,7 @@
             flush1.style.display = 'none'
             p1.innerHTML = ''
 
-            var host = "ws://192.168.1.11:88/";
+            var host = "ws://digger-update.cbpmgt.com/websocket/";
             try {
                 socket = new WebSocket(host);
                 socket.onopen = function (msg) {
